branches/zip: Remove some instrumentation and reduce the output of SHOW MUTEX STATUS in non-debug builds.  (Bug #24386)